# cadet

./: .gitignore  Cargo.toml  README.md
constraints/: a.ct  apple_logo.ct  circle_0-25.ct  circle_0-5.square_0-5.ct  circle_four.ct  interesting.ct  interesting_2.ct  olympics.ct  square_0-5.ct  square_0-75.ct  square_1.circle_0-25.ct  square_point_0-25-0-25.ct  square_point_0-5.ct
models/: random.glb
src/: cdt.rs  edge.rs  face.rs  helper.rs  locate_result.rs  main.rs  orientation.rs  sym_edge.rs  symmetric_compare.rs  vertex.rs
src/cdt/: cdt.rs  delanuay.rs  io.rs  location.rs  mod.rs  structure.rs
src/constraints/: constraints.rs
