[package]
name = "cadet"
version = "0.1.0"
edition = "2021"

[dependencies]
easy-gltf = "1.1.2"
euclid = "0.22.11"
fontdue = "0.9.2"
geo = "0.29.2"
glam = "0.29.2"
intersection_detection = "=0.1.2"
obj-rs = "0.7.4"
prettytable = "0.10.0"
rand = "0.8.5"

[features]
debug_refcell = []

[profile.dev]
opt-level = 0
debug = true
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false
